ic-webapp/clusterip-ic-webapp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-ic-webapp
  namespace: icgroup
  labels:
    env: prod
    type: clusterip
    createur: capgemini
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: ic-webapp
